RESOLVED FIXED151558
[GStreamer] No need to assert the pipeline's bus presence in MediaPlayerPrivateGStreamerBase dtor
https://bugs.webkit.org/show_bug.cgi?id=151558
Summary [GStreamer] No need to assert the pipeline's bus presence in MediaPlayerPriva...
Zan Dobersek
Reported 2015-11-23 00:49:16 PST
[GStreamer] No need to assert the pipeline's bus presence
Attachments
Patch (2.11 KB, patch)
2015-11-23 00:51 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2015-11-23 00:51:09 PST
Sergio Villar Senin
Comment 2 2015-11-23 00:56:25 PST
Comment on attachment 266082 [details] Patch What about the clear() on the pipeline?
Carlos Garcia Campos
Comment 3 2015-11-23 00:59:25 PST
(In reply to comment #2) > Comment on attachment 266082 [details] > Patch > > What about the clear() on the pipeline? It's the destructor, it will be done anyway, the point is whether it's needed explicitly at that point for whatever reason.
Zan Dobersek
Comment 4 2015-11-23 05:39:03 PST
Comment on attachment 266082 [details] Patch Clearing flags on attachment: 266082 Committed r192744: <http://trac.webkit.org/changeset/192744>
Zan Dobersek
Comment 5 2015-11-23 05:39:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.