[GStreamer] No need to assert the pipeline's bus presence in MediaPlayerPrivateGStreamerBase dtor https://bugs.webkit.org/show_bug.cgi?id=151558

Reviewed by Carlos Garcia Campos.

In the MediaPlayerPrivateGStreamerBase destructor, there's some leftover code
that acquires a reference to the GStreamer pipeline's bus object and then
just asserts that it's not null. Not very useful, so remove it.

Also use nullptr to null out the m_player member.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::~MediaPlayerPrivateGStreamerBase):


Canonical link: https://commits.webkit.org/169705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192744 268f45cc-cd09-0410-ab3c-d52691b4dbfc